feat(F01): add Docker environment and fix compilation errors
- Add Dockerfile for Spring Boot dev container (Maven 3.9.6 + JDK 21)
- Update docker-compose.yml with spring-boot-app service, MailHog, PostgreSQL
- Add maven_cache volume to persist downloaded dependencies
- Fix JwtService to use JJWT 0.12.x API (parser/verifyWith/parseSignedClaims)
- Fix SecurityConfig to use Spring Security 6 lambda DSL (no deprecated .and())
- Fix SecurityConfig import (JwtAuthenticationFilter in config package)
- Update CLAUDE.md with correct video-max names and startup instructions

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>